Trying to fix alignment. Pray for me.

--- a/public/styles/index_inner.css
+++ b/public/styles/index_inner.css
@@ -31,6 +31,7 @@ body{
     grid-area: heading;
     align-content: center;
     align-items: center;
+    align-self: center;
   }
 
   .heading > a{
